styling on accounts and navbar and adding eftra links

--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load bootstrap_tags %}
 {% block content %}
+<div class="account-form">
     <form method="post" action="{% url 'login' %}?next={{ next }}" class="accountform">
         <fieldset class="form-group">
             <legend>Login</legend>
@@ -12,4 +13,5 @@
             <button type="submit" class="btn btn-primary">Login</button>
         </fieldset>
     </form>
+</div>
 {% endblock %}
