--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% load bootstrap_tags %}
 {% block content %}
+
+
+<div class="account-form">
     <form method="post" action="{% url 'register' %}" class="accountform">
         <fieldset class="form-group">
             <legend>Create a new account</legend>
@@ -10,4 +13,5 @@
             <button type="submit" class="btn btn-primary">Create account</button>
         </fieldset>
     </form>
+<div class="account-form">
 {% endblock %}
