--- a/products/templates/product_detail.html
+++ b/products/templates/product_detail.html
@@ -51,7 +51,7 @@
                             <form method="post" action="{% url 'add_to_cart_details' product.id %}">
                                 {% csrf_token %}
                                 <div class="input-group">
-                                    <input name="quantity" type="number" min="1" max="999" class="form-control" placeholder="Quantity" required>
+                                    <input name="quantity" type="number" value="1" min="1" max="999" class="form-control" placeholder="Quantity" required>
                                     <br>
                                     <span class="input-group-btn">
                                         <button class="btn btn-success" type="submit">Add to Cart</button>
