--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -23,7 +23,7 @@
                         {% csrf_token %}
                             <div class="input-group">
                                 <div class="input-group-addon">Qty</div>
-                                <input name="quantity" type="number" min="1" max="999"  class="form-control"  required>
+                                <input name="quantity" type="number" value="1" min="1" max="999"  class="form-control"  required>
                                 <div class="input-group-btn ">
                                 <button class="btn btn-success  glyphicon glyphicon-plusX" aria-hidden="true" type="submit"> BUY</button>
                                 </div>
