--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -600,3 +600,14 @@ footer a {
 .delete-button {
     margin-left: 15px;
 }
+
+.account-form {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.nav-fix-top {
+    position: sticky; 
+    z-index: 20; 
+    top: 0;
+}
