--- a/home/templates/contact.html
+++ b/home/templates/contact.html
@@ -2,6 +2,15 @@
 
 {% block content %}
 
+<div class="container mt-4">
+<!--Contactform-->
+
+
+<!--/Contactform-->
+</div>
+
+  
+
 <!--Section: Contact v.2-->
 
 <div class="account-form">
@@ -17,7 +26,7 @@
 
         <!--Grid column-->
         <div class="col-md-9 mb-md-0 mb-5">
-            <form id="contact-form" name="contact-form"  required method="POST">
+            <form action="{% url 'send_email' %}" required method="POST">
             {% csrf_token %}
 
                 <!--Grid row-->
@@ -26,7 +35,7 @@
                     <!--Grid column-->
                     <div class="col-md-6">
                         <div class="md-form mb-0">
-                            <input type="text" id="name" name="name" class="form-control" required>
+                            <input type="text" name="name" class="form-control" required id="form_name" placeholder="Your name">
                             <label for="name" class="">Your name</label>
                         </div>
                     </div>
@@ -35,7 +44,7 @@
                     <!--Grid column-->
                     <div class="col-md-6">
                         <div class="md-form mb-0">
-                            <input type="text" id="email" name="email" class="form-control" required>
+                            <input type="email" name="from_email" class="form-control" required id="form_email" placeholder="name@example.com">
                             <label for="email" class="">Your email</label>
                         </div>
                     </div>
@@ -62,20 +71,20 @@
                     <div class="col-md-12">
 
                         <div class="md-form">
-                            <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
+                             <textarea class="form-control" id="form_message" rows="3" required name="text"></textarea>
                             <label for="message">Your message</label>
                         </div>
 
                     </div>
                 </div>
                 <!--Grid row-->
-
-            </form>
-
-            <div class="text-center text-md-left">
-                <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
+           <div class="text-center text-md-left">
+                <button type="submit" class="btn btn-success">Send</button>
             </div>
             <div class="status"></div>
+            </form>
+
+ 
         </div>
         <!--Grid column-->
 
