--- a/home/templates/contact_success.html
+++ b/home/templates/contact_success.html
@@ -2,9 +2,10 @@
 
 {% block content %}
 
-
+<div class="account-form">
 <div class="mt-5">
 <h4>Your message has been sent, we get back to you as soon as possible</h4>
 </div>
+<div class="account-form">
 
 {% endblock %}
