changing home page and styling on footer

--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -6,7 +6,7 @@
 
   <div class="w3-container w3-content w3-center w3-padding-64" >
     <h2 class="w3-wide">CycleOlogy</h2>
-    <p class="w3-opacity"><i>*******strap line needed**********</i></p>
+    <p class="w3-opacity"><i>It's not a race, it's a journey. Enjoy the moment!</i></p>
     <h4 class="w3-justify"> About CycleOlogy </h4>
 
     <p>Welcome to CycleOlogy  bike shop located in Celbridge, Co Kildare  Ireland.</p>
