--- a/templates/base.html
+++ b/templates/base.html
@@ -173,7 +173,7 @@
      
       {% block content %} {% endblock %}
         </div>
-      <footer class="" >
+      <footer class="footer-fix-bottom" >
          <div class="container">
             <p>Made with Blood, Sweat and lots of Tears......</p>
          </div>
