--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
+<div class="account-form">
     <h2>Success!</h2>
     <p>You are logged in as {{ user.email }} </p>
+</div>
 {% endblock %}
