--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -2,6 +2,47 @@
 
 {% block content %}
 
-<h1>this is the home page</h1>
+
+<div class="container">
+<!-- <div class="jumbotron jumbotron-fluid text-center" style=" background-color: #fafafa">
+  <div class="container">
+    <h1 class="display-3"><i>CycleOlogy</i></h1>
+  </div>
+</div> -->
+
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <div class="item active">
+        <img src="https://license.citruslime.com/cs/blogs/evol/DSC_7193_7521154F.jpg" alt="Los Angeles" style="width:100%;">
+      </div>
+
+      <div class="item">
+        <img src="https://license.citruslime.com/cs/blogs/evol/DSC_7198_566CBC15.jpg" alt="Chicago" style="width:100%;">
+      </div>
+    
+      <div class="item">
+        <img src="https://license.citruslime.com/cs/blogs/evol/DSC_7196_24728ADA.jpg" alt="New york" style="width:100%;">
+      </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
 
 {% endblock %}
