trying to fix footer and ading images to home.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
         </a>
 
             <div id="navbar-icons-mobile" class="d-lg-none">
-        <a class="nav-link nav-link-icon" href="{% url 'view_cart' %}" title="Shopping cart">
+        <a class="nav-link nav-link-icon text-warning " href="{% url 'view_cart' %}" title="Shopping cart">
             <div>
                 <i class="fas fa-shopping-basket navbar-icon"></i>Cart
                         {% if product_count and product_count != 0 %}
@@ -48,17 +48,17 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarToggler-v2">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'home' %}">Home</a>
+                <li class="nav-item ">
+                    <a class="nav-link text-white" href="{% url 'home' %}">Home</a>
                 </li>
                  <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'about' %}">About</a>
+                    <a class="nav-link text-white" href="{% url 'about' %}">About</a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+                <li class="nav-item ">
+                    <a class="nav-link text-white" href="{% url 'contact' %}">Contact</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Accessories</a>
+                    <a class="nav-link text-white dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Accessories</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="{% url 'assessory_products' %}">All Accessories</a>
                         <div class="dropdown-divider"></div>
@@ -71,7 +71,7 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Components</a>
+                    <a class="nav-link text-white dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Components</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
                         <a class="dropdown-item" href="{% url 'components_products' %}">All Components</a>
                         <div class="dropdown-divider"></div>
@@ -82,7 +82,7 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Nutrition</a>
+                    <a class="nav-link text-white dropdown-toggle" href="#" id="navbarDropdown3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Nutrition</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown3">
                         <a class="dropdown-item" href="{% url 'nutrition_products' %}">All Nutrition</a>
                         <div class="dropdown-divider"></div>
@@ -91,7 +91,7 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown4" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Workshop</a>
+                    <a class="nav-link text-white dropdown-toggle" href="#" id="navbarDropdown4" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Workshop</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown4">
                         <a class="dropdown-item" href="{% url 'workshop_products' %}">All Workshop</a>
                         <div class="dropdown-divider"></div>
@@ -100,7 +100,7 @@
                     </div>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="{% url 'clearance_products' %}">Clearance</a>
+                    <a class="nav-link text-white" href="{% url 'clearance_products' %}">Clearance</a>
                 </li>
                                         <li class="">
                             <div  class=" search-test">
@@ -116,11 +116,11 @@
             
 
                                 {% if user.is_authenticated %}
-                <li class="nav-item active"><a class="nav-link"  href="{% url 'profile' %}"><i class="fas fa-user"></i> Profile</a></li>
-                <li class="nav-item active"><a class="nav-link"  href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i> Log Out</a></li>
+                <li class="nav-item "><a class="nav-link text-white"  href="{% url 'profile' %}"><i class="fas fa-user"></i> Profile</a></li>
+                <li class="nav-item "><a class="nav-link text-white"  href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i> Log Out</a></li>
                     {%  else %}
-                <li class="nav-item active "><a class="nav-link" href="{% url 'register' %}"><i class="fas fa-user-plus"></i> Register</a></li>
-                <li class="nav-item active "><a class="nav-link" href="{% url 'login' %}"><i class="fas fa-sign-in-alt"></i> Log In</a></li>
+                <li class="nav-item  "><a class="nav-link text-white" href="{% url 'register' %}"><i class="fas fa-user-plus"></i> Register</a></li>
+                <li class="nav-item "><a class="nav-link text-white" href="{% url 'login' %}"><i class="fas fa-sign-in-alt"></i> Log In</a></li>
                     {% endif %}
             </ul>
             </div>
@@ -128,7 +128,7 @@
 
  
         <div id="navbar-icons-desktop" class="d-none d-lg-inline-block">
-        <a class="nav-link nav-link-icon " href="{% url 'view_cart' %}" title="Shopping cart" aria-label="View shopping cart">
+        <a class="nav-link nav-link-icon text-warning " href="{% url 'view_cart' %}" title="Shopping cart" aria-label="View shopping cart">
             <div>
                 <i class="fas fa-shopping-basket navbar-icon "></i>Cart
                         {% if product_count and product_count != 0 %}
@@ -173,7 +173,8 @@
      
       {% block content %} {% endblock %}
         </div>
-      <footer class="footer-fix-bottom" >
+
+      <footer class="footer-fix-bottom " >
          <div class="container">
             <p>Made with Blood, Sweat and lots of Tears......</p>
          </div>
