--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -10,6 +10,7 @@
   </div>
 </div> -->
 
+  
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -21,15 +22,15 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src="https://license.citruslime.com/cs/blogs/evol/DSC_7193_7521154F.jpg" alt="Los Angeles" style="width:100%;">
+        <img src="https://cycleology.s3-eu-west-1.amazonaws.com/media/images/DSC_7193_7521154F+(1).jpg" alt="shop" style="width:100%;">
       </div>
 
       <div class="item">
-        <img src="https://license.citruslime.com/cs/blogs/evol/DSC_7198_566CBC15.jpg" alt="Chicago" style="width:100%;">
+        <img src="https://cycleology.s3-eu-west-1.amazonaws.com/media/images/DSC_7198_566CBC15+(1).jpg" alt="shop" style="width:100%;">
       </div>
     
       <div class="item">
-        <img src="https://license.citruslime.com/cs/blogs/evol/DSC_7196_24728ADA.jpg" alt="New york" style="width:100%;">
+        <img src="https://cycleology.s3-eu-west-1.amazonaws.com/media/images/DSC_7196_24728ADA+(1).jpg" alt="shop" style="width:100%;">
       </div>
     </div>
 
