--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -618,3 +618,14 @@ footer a {
     z-index: 20; 
     bottom:  0;
 }
+
+.test-footer {
+     position: fixed;
+ left: 0;
+ bottom: 0;
+ width: 100%;
+ background-color: red;
+  color: white;
+  text-align: center;
+}
+
