--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,13 @@
 {% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <title>CycleOlogy</title>
-      <!-- Start Bootstrap CSS CDN -->
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>CycleOlogy</title>
+    <!-- Start Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -17,32 +18,27 @@
 
     <link rel="stylesheet" href="{% static 'font-awesome/css/font-awesome.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
-    
+
     <!-- End Local CSS -->
 
+    {% block head_js %} {% endblock head_js %}
+</head>
 
-
-
-
-      {% block head_js %} {% endblock head_js %}
-   </head>
-   <body>
-   <nav class="navbar   navbar-expand-lg navbar-dark bg-dark nav-fix-top " >
+<body>
+    <nav class="navbar   navbar-expand-lg navbar-dark bg-dark nav-fix-top ">
         <a class="navbar-brand nav-logo" href="/">
             <img src="https://cycleology.s3-eu-west-1.amazonaws.com/media/images/LOGO-SMALL.jpg" class="d-inline-block align-center" alt="Logo for CycleOlogy"> CycleOlogy
         </a>
 
-            <div id="navbar-icons-mobile" class="d-lg-none">
-        <a class="nav-link nav-link-icon text-warning " href="{% url 'view_cart' %}" title="Shopping cart">
-            <div>
-                <i class="fas fa-shopping-basket navbar-icon"></i>Cart
-                        {% if product_count and product_count != 0 %}
-                              <label class="badge badge-warning">{% if product_count > 9 %}9+
-                                {% else %}{{ product_count }}{% endif %}</label>
-                        {% endif %}   
-            </div>
-        </a>
-    </div>
+        <div id="navbar-icons-mobile" class="d-lg-none">
+            <a class="nav-link nav-link-icon text-warning " href="{% url 'view_cart' %}" title="Shopping cart">
+                <div>
+                    <i class="fas fa-shopping-basket navbar-icon"></i>Cart {% if product_count and product_count != 0 %}
+                    <label class="badge badge-warning">{% if product_count > 9 %}9+ {% else %}{{ product_count }}{% endif %}</label>
+                    {% endif %}
+                </div>
+            </a>
+        </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler-v2" aria-controls="navbarToggler-v2" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -51,7 +47,7 @@
                 <li class="nav-item ">
                     <a class="nav-link text-white" href="{% url 'home' %}">Home</a>
                 </li>
-                 <li class="nav-item active">
+                <li class="nav-item active">
                     <a class="nav-link text-white" href="{% url 'about' %}">About</a>
                 </li>
                 <li class="nav-item ">
@@ -102,103 +98,79 @@
                 <li class="nav-item ">
                     <a class="nav-link text-white" href="{% url 'clearance_products' %}">Clearance</a>
                 </li>
-                                        <li class="">
-                            <div  class=" search-test">
-                                <form class="form-inline" action="{% url 'search' %}" method="get">
-                                    <input class="form-control" name="q" type="text" placeholder="Search" aria-label="Search">
-                                </form>
-                            </div>
-                        </li>
+                <li class="">
+                    <div class=" search-test">
+                        <form class="form-inline" action="{% url 'search' %}" method="get">
+                            <input class="form-control" name="q" type="text" placeholder="Search" aria-label="Search">
+                        </form>
+                    </div>
+                </li>
 
             </ul>
-                        <div class="form-inline my-2 my-lg-0 float-lg-right">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            
+            <div class="form-inline my-2 my-lg-0 float-lg-right">
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 
-                                {% if user.is_authenticated %}
-                <li class="nav-item "><a class="nav-link text-white"  href="{% url 'profile' %}"><i class="fas fa-user"></i> Profile</a></li>
-                <li class="nav-item "><a class="nav-link text-white"  href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i> Log Out</a></li>
-                    {%  else %}
-                <li class="nav-item  "><a class="nav-link text-white" href="{% url 'register' %}"><i class="fas fa-user-plus"></i> Register</a></li>
-                <li class="nav-item "><a class="nav-link text-white" href="{% url 'login' %}"><i class="fas fa-sign-in-alt"></i> Log In</a></li>
+                    {% if user.is_authenticated %}
+                    <li class="nav-item "><a class="nav-link text-white" href="{% url 'profile' %}"><i class="fas fa-user"></i> Profile</a></li>
+                    <li class="nav-item "><a class="nav-link text-white" href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i> Log Out</a></li>
+                    {% else %}
+                    <li class="nav-item  "><a class="nav-link text-white" href="{% url 'register' %}"><i class="fas fa-user-plus"></i> Register</a></li>
+                    <li class="nav-item "><a class="nav-link text-white" href="{% url 'login' %}"><i class="fas fa-sign-in-alt"></i> Log In</a></li>
                     {% endif %}
-            </ul>
+                </ul>
             </div>
         </div>
 
- 
         <div id="navbar-icons-desktop" class="d-none d-lg-inline-block">
-        <a class="nav-link nav-link-icon text-warning " href="{% url 'view_cart' %}" title="Shopping cart" aria-label="View shopping cart">
-            <div>
-                <i class="fas fa-shopping-basket navbar-icon "></i>Cart
-                        {% if product_count and product_count != 0 %}
-                              <label class="badge badge-warning">{% if product_count > 9 %}9+
-                                {% else %}{{ product_count }}{% endif %}</label>
-                        {% endif %}            
-                <div id="cart-counter">
-              </div>
+            <a class="nav-link nav-link-icon text-warning " href="{% url 'view_cart' %}" title="Shopping cart" aria-label="View shopping cart">
+                <div>
+                    <i class="fas fa-shopping-basket navbar-icon "></i>Cart {% if product_count and product_count != 0 %}
+                    <label class="badge badge-warning">{% if product_count > 9 %}9+ {% else %}{{ product_count }}{% endif %}</label>
+                    {% endif %}
+                    <div id="cart-counter">
+                    </div>
 
-            </div>
-        </a>
-    </div>
+                </div>
+            </a>
+        </div>
     </nav>
 
-
-
-
-
-
-   
-        <div class="container">
-            {% if messages %}
-            <div class="alert alert-success">
-                <div class="messages">
-                    {% for message in messages %} {{ message }} {% endfor %}
-                </div>
+    <div class="container">
+        {% if messages %}
+        <div class="alert alert-success">
+            <div class="messages">
+                {% for message in messages %} {{ message }} {% endfor %}
             </div>
-            {% endif %}
-     
-
-        
-
-
-           
-
-
-
-
-
-
-
-     
-      {% block content %} {% endblock %}
         </div>
+        {% endif %} {% block content %} {% endblock %}
+    </div>
 
-      <footer class="footer-fix-bottom " >
-         <div class="container">
+    <footer class="footer-fix-bottom ">
+        <div class="container">
             <p>Made with Blood, Sweat and lots of Tears......</p>
-         </div>
-      </footer>
-      <!-- jQuery CDN - Slim version (=without AJAX) -->
-      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-      <!-- Popper.JS -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-      <!-- Bootstrap JS -->
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-      <!-- Font Awesome JS -->
-      <script  src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
-      <script  src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-      <script type="text/javascript">
-         $(document).ready(function() {
-             $('#sidebarCollapse').on('click', function() {
-                 $('#sidebar').toggleClass('active');
-                 $(this).toggleClass('active');
-             });
-         });
-      </script>
-   </body>
+        </div>
+    </footer>
+    <!-- jQuery CDN - Slim version (=without AJAX) -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <!-- Popper.JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+    <!-- Font Awesome JS -->
+    <script src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
+    <script src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $('#sidebarCollapse').on('click', function() {
+                $('#sidebar').toggleClass('active');
+                $(this).toggleClass('active');
+            });
+        });
+    </script>
+</body>
+
 </html>
