--- a/home/templates/contact.html
+++ b/home/templates/contact.html
@@ -1,115 +1,108 @@
-{% extends 'base.html' %}
-
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 
 <div class="container mt-4">
-<!--Contactform-->
+    <!--Contactform-->
 
-
-<!--/Contactform-->
+    <!--/Contactform-->
 </div>
-
-  
 
 <!--Section: Contact v.2-->
 
 <div class="account-form">
-<section class="mb-4">
+    <section class="mb-4">
 
-    <!--Section heading-->
-    <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>
-    <!--Section description-->
-    <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within
-        a matter of hours to help you.</p>
+        <!--Section heading-->
+        <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>
+        <!--Section description-->
+        <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within a matter of hours to help you.</p>
 
-    <div class="row">
+        <div class="row">
 
-        <!--Grid column-->
-        <div class="col-md-9 mb-md-0 mb-5">
-            <form action="{% url 'send_email' %}" required method="POST">
-            {% csrf_token %}
+            <!--Grid column-->
+            <div class="col-md-9 mb-md-0 mb-5">
+                <form action="{% url 'send_email' %}" required method="POST">
+                    {% csrf_token %}
 
-                <!--Grid row-->
-                <div class="row">
+                    <!--Grid row-->
+                    <div class="row">
 
-                    <!--Grid column-->
-                    <div class="col-md-6">
-                        <div class="md-form mb-0">
-                            <input type="text" name="name" class="form-control" required id="form_name" placeholder="Your name">
-                            <label for="name" class="">Your name</label>
+                        <!--Grid column-->
+                        <div class="col-md-6">
+                            <div class="md-form mb-0">
+                                <input type="text" name="name" class="form-control" required id="form_name" placeholder="Your name">
+                                <label for="name" class="">Your name</label>
+                            </div>
                         </div>
-                    </div>
-                    <!--Grid column-->
+                        <!--Grid column-->
 
-                    <!--Grid column-->
-                    <div class="col-md-6">
-                        <div class="md-form mb-0">
-                            <input type="email" name="from_email" class="form-control" required id="form_email" placeholder="name@example.com">
-                            <label for="email" class="">Your email</label>
+                        <!--Grid column-->
+                        <div class="col-md-6">
+                            <div class="md-form mb-0">
+                                <input type="email" name="from_email" class="form-control" required id="form_email" placeholder="name@example.com">
+                                <label for="email" class="">Your email</label>
+                            </div>
                         </div>
-                    </div>
-                    <!--Grid column-->
-
-                </div>
-                <!--Grid row-->
-
-                <!--Grid row-->
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="md-form mb-0">
-                            <input type="text" id="subject" name="subject" class="form-control" required>
-                            <label for="subject" class="">Subject</label>
-                        </div>
-                    </div>
-                </div>
-                <!--Grid row-->
-
-                <!--Grid row-->
-                <div class="row">
-
-                    <!--Grid column-->
-                    <div class="col-md-12">
-
-                        <div class="md-form">
-                             <textarea class="form-control" id="form_message" rows="3" required name="text"></textarea>
-                            <label for="message">Your message</label>
-                        </div>
+                        <!--Grid column-->
 
                     </div>
-                </div>
-                <!--Grid row-->
-           <div class="text-center text-md-left">
-                <button type="submit" class="btn btn-success">Send</button>
+                    <!--Grid row-->
+
+                    <!--Grid row-->
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="md-form mb-0">
+                                <input type="text" id="subject" name="subject" class="form-control" required>
+                                <label for="subject" class="">Subject</label>
+                            </div>
+                        </div>
+                    </div>
+                    <!--Grid row-->
+
+                    <!--Grid row-->
+                    <div class="row">
+
+                        <!--Grid column-->
+                        <div class="col-md-12">
+
+                            <div class="md-form">
+                                <textarea class="form-control" id="form_message" rows="3" required name="text"></textarea>
+                                <label for="message">Your message</label>
+                            </div>
+
+                        </div>
+                    </div>
+                    <!--Grid row-->
+                    <div class="text-center text-md-left">
+                        <button type="submit" class="btn btn-success">Send</button>
+                    </div>
+                    <div class="status"></div>
+                </form>
+
             </div>
-            <div class="status"></div>
-            </form>
+            <!--Grid column-->
 
- 
+            <!--Grid column-->
+            <div class="col-md-3 text-center">
+                <ul class="list-unstyled mb-0">
+                    <li><i class="fas fa-map-marker-alt fa-2x"></i>
+                        <p>Celbridge, Co Kildare, Ireland</p>
+                    </li>
+
+                    <li><i class="fas fa-phone mt-4 fa-2x"></i>
+                        <p>+ 353 1 432 6647</p>
+                    </li>
+
+                    <li><i class="fas fa-envelope mt-4 fa-2x"></i>
+                        <p>contact@cycleology.com</p>
+                    </li>
+                </ul>
+            </div>
+            <!--Grid column-->
+
         </div>
-        <!--Grid column-->
 
-        <!--Grid column-->
-        <div class="col-md-3 text-center">
-            <ul class="list-unstyled mb-0">
-                <li><i class="fas fa-map-marker-alt fa-2x"></i>
-                    <p>Celbridge, Co Kildare, Ireland</p>
-                </li>
-
-                <li><i class="fas fa-phone mt-4 fa-2x"></i>
-                    <p>+ 353 1 432 6647</p>
-                </li>
-
-                <li><i class="fas fa-envelope mt-4 fa-2x"></i>
-                    <p>contact@cycleology.com</p>
-                </li>
-            </ul>
-        </div>
-        <!--Grid column-->
-
-    </div>
-
-</section>
-<!--Section: Contact v.2-->
+    </section>
+    <!--Section: Contact v.2-->
 </div>
 
 {% endblock %}
