--- a/home/templates/contact_success.html
+++ b/home/templates/contact_success.html
@@ -1,11 +1,9 @@
-{% extends 'base.html' %}
-
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 
 <div class="account-form">
-<div class="mt-5">
-<h4>Your message has been sent, we get back to you as soon as possible</h4>
+    <div class="mt-5">
+        <h4>Your message has been sent, we get back to you as soon as possible</h4>
+    </div>
 </div>
-<div class="account-form">
 
 {% endblock %}
