--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -1,10 +1,4 @@
-{% extends 'base.html' %}
-{% load static from staticfiles %}
-{% load bootstrap_tags %}
-
-{% block content %}
-
-
+{% extends 'base.html' %} {% load static from staticfiles %} {% load bootstrap_tags %} {% block content %}
 
 <div id="mobile-shopping-cart" class="d-lg-none">
     <div class="col-12">
@@ -152,7 +146,5 @@
         </div>
     </div>
 </div>
-
-
 
 {% endblock %}
