--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -1,18 +1,12 @@
-{% extends "base.html" %}
-{% load static from staticfiles %}
-{% load bootstrap_tags %}
-
-{% block head_js %}
+{% extends "base.html" %} {% load static from staticfiles %} {% load bootstrap_tags %} {% block head_js %}
 <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
 <script type="text/javascript">
     //<![CDATA[
-        Stripe.publishableKey = '{{ publishable }}';
+    Stripe.publishableKey = '{{ publishable }}';
     //]]>
 </script>
 <script type="text/javascript" src="{% static 'js/stripe.js' %}"></script>
-{% endblock %}
-
-{% block content %}
+{% endblock %} {% block content %}
 
 <div id="mobile-shopping-cart" class="d-lg-none">
     <div class="col-12">
@@ -56,46 +50,38 @@
     </div>
 </div>
 
-
 <div id="desktop-shopping-cart" class="d-none d-lg-block">
-        <div class="col-12">
-            <div class="table-responsive ">
-                <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th scope="col"> </th>
-                            <th scope="col">Product</th>
-                            <th scope="col" class="text-center">Quantity</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for item in cart_items %}
-                        <tr>
-                            <td><div class="product card-img-top" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image1 }}')"></div></td>
-                            <td class="align-middle">{{ item.product.name }}</td>
-                             {% csrf_token %}
-                             <td class="align-middle text-center">{{item.quantity}}</td>
-                         {% endfor %}
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td class="text-right"><strong>Total</strong></td>
-                            <td class="text-right"><strong>€{{ total }}</strong></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+    <div class="col-12">
+        <div class="table-responsive ">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th scope="col"> </th>
+                        <th scope="col">Product</th>
+                        <th scope="col" class="text-center">Quantity</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for item in cart_items %}
+                    <tr>
+                        <td>
+                            <div class="product card-img-top" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image1 }}')"></div>
+                        </td>
+                        <td class="align-middle">{{ item.product.name }}</td>
+                        {% csrf_token %}
+                        <td class="align-middle text-center">{{item.quantity}}</td>
+                        {% endfor %}
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td class="text-right"><strong>Total</strong></td>
+                        <td class="text-right"><strong>€{{ total }}</strong></td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
+    </div>
 </div>
-
-
-
-
-
-
-
-
-
 
 <!-- 
 <div class="row">
@@ -123,6 +109,5 @@
         <input class=" btn btn-primary" id="submit_payment_btn" name="commit" type="submit" value="Submit Payment">
     </div>
 </form>
-
 
 {% endblock %}
