--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -13,5 +13,5 @@
             <button type="submit" class="btn btn-primary">Create account</button>
         </fieldset>
     </form>
-<div class="account-form">
+</div>
 {% endblock %}
