--- a/home/templates/contact.html
+++ b/home/templates/contact.html
@@ -53,13 +53,13 @@
             <div class="col-md-3 text-center">
                 <ul class="list-unstyled mb-0">
                     <li><i class="fas fa-map-marker-alt fa-2x"></i>
-                        <p>Celbridge, Co Kildare, Ireland</p>
+                    <p><a  target="_blank" href="https://goo.gl/maps/YE22FfBT7F31D1kQA">Celbridge, Co Kildare, Ireland</a></p>
                     </li>
                     <li><i class="fas fa-phone mt-4 fa-2x"></i>
-                        <p>+ 353 1 432 6647</p>
+                    <p><a href="tel:+35314326647">+ 353 1 432 6647</a></p>
                     </li>
                     <li><i class="fas fa-envelope mt-4 fa-2x"></i>
-                        <p>contact@cycleology.com</p>
+                    <p><a href="mailto:contact@cycleology.com">contact@cycleology.com</a></p>
                     </li>
                 </ul>
             </div>
