changing base.html and styling to fix footer issue

--- a/templates/404.html
+++ b/templates/404.html
@@ -8,7 +8,7 @@
 		<h2 class="error-text">You seem lost!</h2>
 		<h4 class="error-text-small">The page you are trying to reach doesn't exist.</h4>
 		<div class="text-center">
-			<a href="" type="button"  class="btn  btn-lg  error-button">Return Home</a>
+			<a href="/" type="button"  class="btn  btn-lg  error-button">Return Home</a>
 		</div>
 	</div>
 </div>
