--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -70,20 +70,44 @@ a, a:hover, a:focus {
     margin-top: 10px !important;
 }
 
-footer {
+
+#page-container {
+  position: relative;
+  min-height: 100%;
+}
+
+#content-wrap {
+  padding-bottom: 3.4rem;    /* Footer height */
+}
+
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 3.4rem;            /* Footer height */
+}
+
+.footer-fix-bottom {
     margin-top: 40px;
     padding-top: 20px;
     padding-bottom: 20px;
     border-top: 1px solid #ededed;
     color: #A9A9A9;
+    background: #343a40;
+    padding: 40px;
+
+
+}
+
+/* footer {
+
 }
 
 
 
 footer {
-    background: #343a40;
-    padding: 40px;
-}
+ 
+} */
 footer a {
     color: #f8f9fa!important
 }
@@ -588,8 +612,48 @@ footer a {
 
  */
 
+/* Error page styling start */
+
+.error-code {
+   margin-bottom: 20px;
+  color: #facf5a;
+  text-align: center;
+  font-family: 'Raleway';
+  font-size: 90px;
+  font-weight: 800;
+}
+
+.error-text {
+    color: #455d7a;
+    text-align: center;
+    font-family: 'Raleway';
+    font-size: 30px;
+    text-transform: uppercase;
+}
+
+.error-text-small {
+    color: #455d7a;
+    text-align: center;
+    font-family: 'Raleway';
+    font-size: 15px;
+}
+
+.error-button {
+    background-color: #facf5a;
+    color: #455d7a;
+    justify-content: center;
+    font-family: 'Raleway';
+}
+
+/* Error page styling end */
+
+
 
 /* ths is a test */
+
+
+
+
 
 @media (max-width: 992px) {
     .navbar-header {
