--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,9 @@
 </head>
 
 <body>
+ <div id="page-container">
+   <div id="content-wrap">
+
     <nav class="navbar   navbar-expand-lg navbar-dark bg-dark nav-fix-top ">
         <a class="navbar-brand nav-logo" href="/">
             <img src="https://cycleology.s3-eu-west-1.amazonaws.com/media/images/LOGO-SMALL.jpg" class="d-inline-block align-center" alt="Logo for CycleOlogy"> CycleOlogy
@@ -148,12 +151,14 @@
         </div>
         {% endif %} {% block content %} {% endblock %}
     </div>
+   </div>
 
     <footer class="footer-fix-bottom ">
         <div class="container">
             <p>Made with Blood, Sweat and lots of Tears......</p>
         </div>
     </footer>
+ </div>
     <!-- jQuery CDN - Slim version (=without AJAX) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <!-- Popper.JS -->
